[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/ObjectEditor.gd" type="Script" id=1]

[sub_resource type="ShortCut" id=1]


[node name="GUI" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ObjectEditor" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 824.0
margin_right = 1029.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect" ]

[node name="Panel" type="PanelContainer" parent="ObjectEditor" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 205.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="VBox" type="VBoxContainer" parent="ObjectEditor/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 190.0
margin_bottom = 593.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="NameLabel" type="Label" parent="ObjectEditor/Panel/VBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 183.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureRect" type="TextureRect" parent="ObjectEditor/Panel/VBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 183.0
margin_bottom = 196.0
rect_min_size = Vector2( 178, 178 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Name" type="HBoxContainer" parent="ObjectEditor/Panel/VBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 183.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="Label" type="Label" parent="ObjectEditor/Panel/VBox/Name" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Name: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NameLine" type="LineEdit" parent="ObjectEditor/Panel/VBox/Name" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_right = 108.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
focus_mode = 2
context_menu_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Placeholder" ]

[node name="Velocity" type="HBoxContainer" parent="ObjectEditor/Panel/VBox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 228.0
margin_right = 183.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="Label" type="Label" parent="ObjectEditor/Panel/VBox/Velocity" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Velocity: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XVelocity" type="LineEdit" parent="ObjectEditor/Panel/VBox/Velocity" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 63.0
margin_right = 121.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
focus_mode = 2
context_menu_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Placeholder" ]

[node name="YVelocity" type="LineEdit" parent="ObjectEditor/Panel/VBox/Velocity" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 125.0
margin_right = 183.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
focus_mode = 2
context_menu_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Placeholder" ]

[node name="Mass" type="HBoxContainer" parent="ObjectEditor/Panel/VBox" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 256.0
margin_right = 183.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="Label" type="Label" parent="ObjectEditor/Panel/VBox/Mass" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Mass: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MassLine" type="LineEdit" parent="ObjectEditor/Panel/VBox/Mass" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_right = 103.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
focus_mode = 2
context_menu_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Placeholder" ]

[node name="Radius" type="HBoxContainer" parent="ObjectEditor/Panel/VBox" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 284.0
margin_right = 183.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="Label" type="Label" parent="ObjectEditor/Panel/VBox/Radius" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Radius"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RadiusLine" type="LineEdit" parent="ObjectEditor/Panel/VBox/Radius" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_right = 104.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
focus_mode = 2
context_menu_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Placeholder" ]

[node name="ChangeMode" type="HBoxContainer" parent="ObjectEditor/Panel/VBox" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 183.0
margin_bottom = 352.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="ChangeLabel" type="Label" parent="ObjectEditor/Panel/VBox/ChangeMode" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 13.0
margin_right = 71.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Changable?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckButton" type="CheckButton" parent="ObjectEditor/Panel/VBox/ChangeMode" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_right = 151.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = SubResource( 1 )
group = null
flat = false
align = 0

[connection signal="text_entered" from="ObjectEditor/Panel/VBox/Name/NameLine" to="ObjectEditor" method="_on_NameLine_text_entered"]

[connection signal="text_entered" from="ObjectEditor/Panel/VBox/Velocity/XVelocity" to="ObjectEditor" method="_on_XVelocity_text_entered"]

[connection signal="text_entered" from="ObjectEditor/Panel/VBox/Velocity/YVelocity" to="ObjectEditor" method="_on_YVelocity_text_entered"]

[connection signal="text_entered" from="ObjectEditor/Panel/VBox/Mass/MassLine" to="ObjectEditor" method="_on_MassLine_text_entered"]

[connection signal="text_entered" from="ObjectEditor/Panel/VBox/Radius/RadiusLine" to="ObjectEditor" method="_on_RadiusLine_text_entered"]


